--- a/src/output.css
+++ b/src/output.css
@@ -566,12 +566,36 @@ video {
   top: -400;
 }
 
+.top-\[-50px\] {
+  top: -50px;
+}
+
 .top-\[80px\] {
   top: 80px;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .z-\[1000\] {
   z-index: 1000;
+}
+
+.z-30 {
+  z-index: 30;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .col-span-12 {
@@ -590,6 +614,16 @@ video {
   margin: auto;
 }
 
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -602,16 +636,16 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
+.mt-\[350px\] {
+  margin-top: 350px;
 }
 
 .block {
@@ -642,21 +676,16 @@ video {
   height: 1.5rem;
 }
 
-
-.h-\[60px\] {
-  height: 60px;
+.h-\[100px\] {
+  height: 100px;
 }
 
-.h-\[800px\] {
-  height: 800px;
-
-.h-\[200px\] {
-  height: 200px;
+.h-\[300px\] {
+  height: 300px;
 }
 
 .h-\[60px\] {
   height: 60px;
-
 }
 
 .h-auto {
@@ -665,6 +694,34 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[150px\] {
+  height: 150px;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-\[70px\] {
+  height: 70px;
+}
+
+.h-\[15px\] {
+  height: 15px;
 }
 
 .w-0 {
@@ -687,13 +744,8 @@ video {
   width: 1.5rem;
 }
 
-
 .w-\[130px\] {
   width: 130px;
-
-.w-\[190px\] {
-  width: 190px;
-
 }
 
 .w-\[500px\] {
@@ -704,23 +756,25 @@ video {
   width: 100%;
 }
 
+.w-\[250px\] {
+  width: 250px;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[10px\] {
+  width: 10px;
+}
 
 .w-\[150px\] {
   width: 150px;
 }
 
-.w-\[120px\] {
-  width: 120px;
+.w-\[100px\] {
+  width: 100px;
 }
-
-.w-\[130px\] {
-  width: 130px;
-}
-
-.w-\[140px\] {
-  width: 140px;
-}
-
 
 .cursor-pointer {
   cursor: pointer;
@@ -754,11 +808,9 @@ video {
   justify-content: space-around;
 }
 
-
 .justify-evenly {
   justify-content: space-evenly;
 }
-
 
 .gap-2 {
   gap: 0.5rem;
@@ -787,6 +839,10 @@ video {
   row-gap: 1.5rem;
 }
 
+.gap-y-8 {
+  row-gap: 2rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -807,29 +863,16 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-
-.rounded-md {
-  border-radius: 0.375rem;
-
-.rounded {
-  border-radius: 0.25rem;
-
-}
-
 .border-4 {
   border-width: 4px;
-}
-
-.border {
-  border-width: 1px;
-}
-
-.border-2 {
-  border-width: 2px;
 }
 
 .border-blue-100 {
@@ -840,27 +883,6 @@ video {
 .border-green-500 {
   --tw-border-opacity: 1;
   border-color: rgb(34 197 94 / var(--tw-border-opacity));
-}
-
-
-.border-red-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(254 226 226 / var(--tw-border-opacity));
-}
-
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-
-.border-gray-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(31 41 55 / var(--tw-border-opacity));
-}
-
-.border-e-red-100 {
-  --tw-border-opacity: 1;
-  border-inline-end-color: rgb(254 226 226 / var(--tw-border-opacity));
 }
 
 .bg-gray-100 {
@@ -883,24 +905,33 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-=======
-.bg-gray-100 {
+.bg-orange-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(254 215 170 / var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+.bg-\[url\(\'https\:\/\/www\.banimode\.com\/themes\/new\/assets\/images\/footer\/featurebg\.png\'\)\] {
+  background-image: url('https://www.banimode.com/themes/new/assets/images/footer/featurebg.png');
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+.bg-none {
+  background-image: none;
+}
+
+.bg-contain {
+  background-size: contain;
 }
 
 .bg-cover {
   background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .object-cover {
@@ -924,11 +955,9 @@ video {
   padding: 1.5rem;
 }
 
-
 .p-8 {
   padding: 2rem;
 }
-
 
 .px-2 {
   padding-left: 0.5rem;
@@ -960,21 +989,6 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -987,18 +1001,66 @@ video {
   padding-top: 2.5rem;
 }
 
+.pt-\[70px\] {
+  padding-top: 70px;
+}
+
+.pt-\[20px\] {
+  padding-top: 20px;
+}
+
+.pt-\[30px\] {
+  padding-top: 30px;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-\[15px\] {
+  font-size: 15px;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-\[10px\] {
+  font-size: 10px;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-green-600 {
@@ -1009,6 +1071,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-emerald-50 {
+  --tw-text-opacity: 1;
+  color: rgb(236 253 245 / var(--tw-text-opacity));
 }
 
 .line-through {
@@ -1028,26 +1095,9 @@ video {
   opacity: 1;
 }
 
-
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.opacity-\[50\%\] {
+  opacity: 50%;
 }
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-
-.shadow-xl {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
@@ -1055,12 +1105,11 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow {
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-
 
 .drop-shadow-xl {
   --tw-drop-shadow: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
@@ -1093,29 +1142,218 @@ video {
   transition-duration: 300ms;
 }
 
-
-=======
-.duration-200 {
-  transition-duration: 200ms;
+.duration-500 {
+  transition-duration: 500ms;
 }
-
 
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
-
-.hover\:w-\[190px\]:hover {
-  width: 190px;
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
 }
 
+.after\:top-\[70px\]::after {
+  content: var(--tw-content);
+  top: 70px;
+}
+
+.after\:top-\[-70\]::after {
+  content: var(--tw-content);
+  top: -70;
+}
+
+.after\:top-\[-70px\]::after {
+  content: var(--tw-content);
+  top: -70px;
+}
+
+.after\:top-\[-50px\]::after {
+  content: var(--tw-content);
+  top: -50px;
+}
+
+.after\:top-\[-10px\]::after {
+  content: var(--tw-content);
+  top: -10px;
+}
+
+.after\:top-\[-1px\]::after {
+  content: var(--tw-content);
+  top: -1px;
+}
+
+.after\:top-\[-px\]::after {
+  content: var(--tw-content);
+  top: -px;
+}
+
+.after\:top-\[1px\]::after {
+  content: var(--tw-content);
+  top: 1px;
+}
+
+.after\:top-\[10px\]::after {
+  content: var(--tw-content);
+  top: 10px;
+}
+
+.after\:top-\[30px\]::after {
+  content: var(--tw-content);
+  top: 30px;
+}
+
+.after\:top-\[50px\]::after {
+  content: var(--tw-content);
+  top: 50px;
+}
+
+.after\:z-20::after {
+  content: var(--tw-content);
+  z-index: 20;
+}
+
+.after\:z-10::after {
+  content: var(--tw-content);
+  z-index: 10;
+}
+
+.after\:z-0::after {
+  content: var(--tw-content);
+  z-index: 0;
+}
+
+.after\:block::after {
+  content: var(--tw-content);
+  display: block;
+}
+
+.after\:h-full::after {
+  content: var(--tw-content);
+  height: 100%;
+}
+
+.after\:h-\[170\]::after {
+  content: var(--tw-content);
+  height: 170;
+}
+
+.after\:h-\[170px\]::after {
+  content: var(--tw-content);
+  height: 170px;
+}
+
+.after\:h-\[200px\]::after {
+  content: var(--tw-content);
+  height: 200px;
+}
+
+.after\:w-full::after {
+  content: var(--tw-content);
+  width: 100%;
+}
+
+.after\:w-\[170\]::after {
+  content: var(--tw-content);
+  width: 170;
+}
+
+.after\:w-\[170px\]::after {
+  content: var(--tw-content);
+  width: 170px;
+}
+
+.after\:bg-gray-400::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.after\:bg-white::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.after\:bg-opacity-20::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 0.2;
+}
+
+.after\:opacity-50::after {
+  content: var(--tw-content);
+  opacity: 0.5;
+}
+
+.after\:opacity-\[50\%\]::after {
+  content: var(--tw-content);
+  opacity: 50%;
+}
+
+.after\:opacity-\[100\%\]::after {
+  content: var(--tw-content);
+  opacity: 100%;
+}
+
+.after\:opacity-\[0\%\]::after {
+  content: var(--tw-content);
+  opacity: 0%;
+}
+
+.after\:opacity-\[70\%\]::after {
+  content: var(--tw-content);
+  opacity: 70%;
+}
+
+.after\:opacity-\[80\%\]::after {
+  content: var(--tw-content);
+  opacity: 80%;
+}
+
+.after\:opacity-\[90\%\]::after {
+  content: var(--tw-content);
+  opacity: 90%;
+}
+
+.after\:duration-200::after {
+  content: var(--tw-content);
+  transition-duration: 200ms;
+}
+
+.after\:duration-300::after {
+  content: var(--tw-content);
+  transition-duration: 300ms;
+}
+
+.after\:duration-500::after {
+  content: var(--tw-content);
+  transition-duration: 500ms;
+}
+
+.after\:content-\[\]::after {
+  --tw-content: ;
+  content: var(--tw-content);
+}
+
+.after\:content-\[\"\"\]::after {
+  --tw-content: "";
+  content: var(--tw-content);
+}
+
+.after\:content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
+.after\:content-\[\'hadi\'\]::after {
+  --tw-content: 'hadi';
+  content: var(--tw-content);
+}
 
 .hover\:border-2:hover {
   border-width: 2px;
-}
-
-.hover\:border:hover {
-  border-width: 1px;
 }
 
 .hover\:border-b-2:hover {
@@ -1131,8 +1369,8 @@ video {
   padding: 0.75rem;
 }
 
-.hover\:opacity-25:hover {
-  opacity: 0.25;
+.hover\:opacity-\[100\%\]:hover {
+  opacity: 100%;
 }
 
 .hover\:shadow-lg:hover {
@@ -1141,52 +1379,30 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-
-.hover\:shadow-xl:hover {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.after\:hover\:opacity-\[\]:hover::after {
+  content: var(--tw-content);
+  opacity: ;
 }
 
-.hover\:grayscale-0:hover {
-  --tw-grayscale: grayscale(0);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.after\:hover\:opacity-\[50\]:hover::after {
+  content: var(--tw-content);
+  opacity: 50;
 }
 
-.hover\:grayscale:hover {
-  --tw-grayscale: grayscale(100%);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.after\:hover\:opacity-\[50\%\]:hover::after {
+  content: var(--tw-content);
+  opacity: 50%;
 }
 
-.hover\:hue-rotate-0:hover {
-  --tw-hue-rotate: hue-rotate(0deg);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.after\:hover\:opacity-\[60\%\]:hover::after {
+  content: var(--tw-content);
+  opacity: 60%;
 }
 
-.hover\:hue-rotate-30:hover {
-  --tw-hue-rotate: hue-rotate(30deg);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.after\:hover\:opacity-\[70\%\]:hover::after {
+  content: var(--tw-content);
+  opacity: 70%;
 }
-
-.hover\:filter:hover {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.hover\:backdrop-grayscale:hover {
-  --tw-backdrop-grayscale: grayscale(100%);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.hover\:backdrop\:opacity-25:hover::backdrop {
-  opacity: 0.25;
-}
-
-.hover\:backdrop\:grayscale-0:hover::backdrop {
-  --tw-grayscale: grayscale(0);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
@@ -1210,6 +1426,11 @@ video {
 
   .md\:z-auto {
     z-index: auto;
+  }
+
+  .md\:mx-10 {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
   }
 
   .md\:block {
@@ -1236,12 +1457,20 @@ video {
     height: 200px;
   }
 
+  .md\:h-\[230px\] {
+    height: 230px;
+  }
+
+  .md\:h-\[350px\] {
+    height: 350px;
+  }
+
   .md\:h-\[80px\] {
     height: 80px;
-=======
-  .md\:h-\[200px\] {
-    height: 200px;
+  }
 
+  .md\:h-\[100px\] {
+    height: 100px;
   }
 
   .md\:w-1\/3 {
@@ -1252,17 +1481,16 @@ video {
     width: 16rem;
   }
 
-
   .md\:w-\[1250px\] {
     width: 1250px;
-=======
-  .md\:w-\[190px\] {
-    width: 190px;
-
   }
 
   .md\:w-\[180px\] {
     width: 180px;
+  }
+
+  .md\:w-\[300px\] {
+    width: 300px;
   }
 
   .md\:max-w-\[1250px\] {
@@ -1278,19 +1506,32 @@ video {
          column-gap: 0.75rem;
   }
 
+  .md\:bg-\[url\(\'https\:\/\/www\.banimode\.com\/themes\/new\/assets\/images\/footer\/featurebg\.png\'\)\] {
+    background-image: url('https://www.banimode.com/themes/new/assets/images/footer/featurebg.png');
+  }
+
+  .md\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
   .md\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
   }
 
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .md\:pt-\[70px\] {
+    padding-top: 70px;
   }
 
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-gray-500 {
+    --tw-text-opacity: 1;
+    color: rgb(107 114 128 / var(--tw-text-opacity));
   }
 
   .md\:opacity-100 {
@@ -1319,6 +1560,10 @@ video {
 
   .lg\:col-span-8 {
     grid-column: span 8 / span 8;
+  }
+
+  .lg\:h-\[400px\] {
+    height: 400px;
   }
 
   .lg\:w-0 {
