--- a/src/output.css
+++ b/src/output.css
@@ -628,6 +628,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -664,14 +668,24 @@ video {
   height: 1.5rem;
 }
 
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[300px\] {
+  height: 300px;
+}
 
 .h-\[60px\] {
   height: 60px;
 }
 
-.h-\[800px\] {
-  height: 800px;
+.h-\[70px\] {
+  height: 70px;
+}
 
+.h-\[80\%\] {
+  height: 80%;
 }
 
 .h-auto {
@@ -682,9 +696,8 @@ video {
   height: 100%;
 }
 
-
-.h-\[700px\] {
-  height: 700px;
+.h-\[620px\] {
+  height: 620px;
 }
 
 .h-\[600px\] {
@@ -695,55 +708,16 @@ video {
   height: 500px;
 }
 
-.h-\[550px\] {
-  height: 550px;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-
-.h-\[\] {
-  height: ;
-}
-
-
-.h-\[100px\] {
-  height: 100px;
-}
-
 .h-\[400px\] {
   height: 400px;
 }
 
-.h-\[350px\] {
-  height: 350px;
+.h-\[420px\] {
+  height: 420px;
 }
 
-.h-\[1000px\] {
-  height: 1000px;
-}
-
-.h-\[750px\] {
-  height: 750px;
-}
-
-.h-\[760px\] {
-  height: 760px;
-
+.h-\[430px\] {
+  height: 430px;
 }
 
 .w-0 {
@@ -765,6 +739,11 @@ video {
 .w-6 {
   width: 1.5rem;
 }
+
+.w-\[100px\] {
+  width: 100px;
+}
+
 .w-\[130px\] {
   width: 130px;
 }
@@ -776,28 +755,6 @@ video {
 .w-full {
   width: 100%;
 }
-
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[1\] {
-  width: 1;
-}
-
-.w-\[100\] {
-  width: 100;
-}
-
-.w-\[1000px\] {
-  width: 1000px;
-}
-
 
 .cursor-pointer {
   cursor: pointer;
@@ -932,11 +889,12 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-none {
+  background-image: none;
+}
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-
+.bg-contain {
+  background-size: contain;
 }
 
 .bg-cover {
@@ -976,26 +934,19 @@ video {
   padding: 2rem;
 }
 
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
-
 
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-8 {
@@ -1013,13 +964,6 @@ video {
   padding-bottom: 1.5rem;
 }
 
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -1028,26 +972,12 @@ video {
   padding-right: 1.5rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
+.pt-\[30px\] {
+  padding-top: 30px;
 }
 
-
-.pt-8 {
-  padding-top: 2rem;
-}
-
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
-
+.text-center {
+  text-align: center;
 }
 
 .text-2xl {
@@ -1055,16 +985,12 @@ video {
   line-height: 2rem;
 }
 
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-\[10px\] {
+  font-size: 10px;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-
+.text-\[15px\] {
+  font-size: 15px;
 }
 
 .text-sm {
@@ -1154,13 +1080,57 @@ video {
 
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
 
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:top-\[30px\]::after {
+  content: var(--tw-content);
+  top: 30px;
+}
+
+.after\:z-0::after {
+  content: var(--tw-content);
+  z-index: 0;
+}
+
+.after\:block::after {
+  content: var(--tw-content);
+  display: block;
+}
+
+.after\:h-\[200px\]::after {
+  content: var(--tw-content);
+  height: 200px;
+}
+
+.after\:w-full::after {
+  content: var(--tw-content);
+  width: 100%;
+}
+
+.after\:bg-white::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.after\:opacity-\[90\%\]::after {
+  content: var(--tw-content);
+  opacity: 90%;
+}
+
+.after\:duration-500::after {
+  content: var(--tw-content);
+  transition-duration: 500ms;
 }
 
 .hover\:border-2:hover {
   border-width: 2px;
 }
-
 
 .hover\:border-b-2:hover {
   border-bottom-width: 2px;
@@ -1181,6 +1151,10 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.after\:hover\:opacity-\[70\%\]:hover::after {
+  content: var(--tw-content);
+  opacity: 70%;
+}
 
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
@@ -1247,14 +1221,32 @@ video {
     height: 350px;
   }
 
+  .md\:h-\[760px\] {
+    height: 760px;
+  }
+
   .md\:h-\[80px\] {
     height: 80px;
   }
 
+  .md\:h-full {
+    height: 100%;
+  }
 
-  .md\:h-\[760px\] {
-    height: 760px;
+  .md\:h-\[700px\] {
+    height: 700px;
+  }
 
+  .md\:h-\[600px\] {
+    height: 600px;
+  }
+
+  .md\:h-\[630px\] {
+    height: 630px;
+  }
+
+  .md\:h-\[620px\] {
+    height: 620px;
   }
 
   .md\:w-1\/3 {
@@ -1298,11 +1290,6 @@ video {
     background-image: url('https://www.banimode.com/themes/new/assets/images/footer/featurebg.png');
   }
 
-  .md\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
-
   .md\:py-0 {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -1310,6 +1297,11 @@ video {
 
   .md\:pt-\[70px\] {
     padding-top: 70px;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .md\:text-xl {
